<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">mediasoup-client</string>
    <string name="app_name_r1_launcher">R1 Launcher</string>
    <string name="app_version">null</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="back_home">home</string>
    <string name="bluetooth">bluetooth</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottom_sheet_collapse_description">Collapse bottom sheet</string>
    <string name="bottom_sheet_dismiss_description">Dismiss bottom sheet</string>
    <string name="bottom_sheet_drag_handle_description">Drag handle</string>
    <string name="bottom_sheet_expand_description">Expand bottom sheet</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="brvah_load_complete">点击加载更多</string>
    <string name="brvah_load_end">没有更多数据</string>
    <string name="brvah_load_failed">加载失败，请点我重试</string>
    <string name="brvah_loading">正在加载中...</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close_drawer">Close navigation menu</string>
    <string name="close_sheet">Close sheet</string>
    <string name="collapsed">Collapsed</string>
    <string name="confirm">confirm</string>
    <string name="connect">connect</string>
    <string name="connected">connected</string>
    <string name="connecting">connecting</string>
    <string name="date_input_headline">Entered date</string>
    <string name="date_input_headline_description">Entered date: %1$s</string>
    <string name="date_input_invalid_for_pattern">Date does not match expected pattern: %1$s</string>
    <string name="date_input_invalid_not_allowed">Date not allowed: %1$s</string>
    <string name="date_input_invalid_year_range">Date out of expected year range %1$s - %2$s</string>
    <string name="date_input_label">Date</string>
    <string name="date_input_no_input_description">None</string>
    <string name="date_input_title">Select date</string>
    <string name="date_picker_headline">Selected date</string>
    <string name="date_picker_headline_description">Current selection: %1$s</string>
    <string name="date_picker_navigate_to_year_description">Navigate to year %1$s</string>
    <string name="date_picker_no_selection_description">None</string>
    <string name="date_picker_scroll_to_earlier_years">Scroll to show earlier years</string>
    <string name="date_picker_scroll_to_later_years">Scroll to show later years</string>
    <string name="date_picker_switch_to_calendar_mode">Switch to calendar input mode</string>
    <string name="date_picker_switch_to_day_selection">Swipe to select a year, or tap to switch back to selecting a day</string>
    <string name="date_picker_switch_to_input_mode">Switch to text input mode</string>
    <string name="date_picker_switch_to_next_month">Change to next month</string>
    <string name="date_picker_switch_to_previous_month">Change to previous month</string>
    <string name="date_picker_switch_to_year_selection">Switch to selecting a year</string>
    <string name="date_picker_title">Select date</string>
    <string name="date_picker_today_description">Today</string>
    <string name="date_picker_year_picker_pane_title">Year picker visible</string>
    <string name="date_range_input_invalid_range_input">Invalid date range input</string>
    <string name="date_range_input_title">Enter dates</string>
    <string name="date_range_picker_day_in_range">In range</string>
    <string name="date_range_picker_end_headline">End date</string>
    <string name="date_range_picker_scroll_to_next_month">Scroll to show the next month</string>
    <string name="date_range_picker_scroll_to_previous_month">Scroll to show the previous month</string>
    <string name="date_range_picker_start_headline">Start date</string>
    <string name="date_range_picker_title">Select dates</string>
    <string name="default_error_message">Invalid input</string>
    <string name="default_popup_window_title">Pop-Up Window</string>
    <string name="define_zxingandroidembedded" />
    <string name="dest_title">destination title</string>
    <string name="dialog">Dialog</string>
    <string name="disconnecting">disconnecting</string>
    <string name="dropdown_menu">Dropdown menu</string>
    <string name="enter_password">enter password</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exo_download_completed">Download completed</string>
    <string name="exo_download_description">Download</string>
    <string name="exo_download_downloading">Downloading</string>
    <string name="exo_download_failed">Download failed</string>
    <string name="exo_download_notification_channel_name">Downloads</string>
    <string name="exo_download_paused">Downloads paused</string>
    <string name="exo_download_paused_for_network">Downloads waiting for network</string>
    <string name="exo_download_paused_for_wifi">Downloads waiting for WiFi</string>
    <string name="exo_download_removing">Removing downloads</string>
    <string name="expanded">Expanded</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="failed_connecting_to_bluetooth">failed connecting to bluetooth device</string>
    <string name="failed_connecting_to_network">failed connecting to network</string>
    <string name="forget">forget</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="in_progress">In progress</string>
    <string name="indeterminate">Partially checked</string>
    <string name="item_view_role_description">Tab</string>
    <string name="library_zxingandroidembedded_author">JourneyApps</string>
    <string name="library_zxingandroidembedded_authorWebsite">https://journeyapps.com/</string>
    <string name="library_zxingandroidembedded_isOpenSource">true</string>
    <string name="library_zxingandroidembedded_libraryDescription">Barcode scanning library for Android, using ZXing for decoding.</string>
    <string name="library_zxingandroidembedded_libraryName">ZXing Android Embedded</string>
    <string name="library_zxingandroidembedded_libraryVersion" />
    <string name="library_zxingandroidembedded_libraryWebsite">https://github.com/journeyapps/zxing-android-embedded</string>
    <string name="library_zxingandroidembedded_licenseId">apache_2_0</string>
    <string name="library_zxingandroidembedded_repositoryLink">https://github.com/journeyapps/zxing-android-embedded</string>
    <string name="m3_exceed_max_badge_text_suffix">%1$s%2$s</string>
    <string name="m3_ref_typeface_brand_medium">sans-serif-medium</string>
    <string name="m3_ref_typeface_brand_regular">sans-serif</string>
    <string name="m3_ref_typeface_plain_medium">sans-serif-medium</string>
    <string name="m3_ref_typeface_plain_regular">sans-serif</string>
    <string name="m3_sys_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="m3_sys_motion_easing_emphasized_accelerate">cubic-bezier(0.3, 0, 0.8, 0.2)</string>
    <string name="m3_sys_motion_easing_emphasized_decelerate">cubic-bezier(0.1, 0.7, 0.1, 1)</string>
    <string name="m3_sys_motion_easing_emphasized_path_data">M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1</string>
    <string name="m3_sys_motion_easing_legacy">cubic-bezier(0.4, 0, 0.2, 1)</string>
    <string name="m3_sys_motion_easing_legacy_accelerate">cubic-bezier(0.4, 0, 1, 1)</string>
    <string name="m3_sys_motion_easing_legacy_decelerate">cubic-bezier(0, 0, 0.2, 1)</string>
    <string name="m3_sys_motion_easing_linear">cubic-bezier(0, 0, 1, 1)</string>
    <string name="m3_sys_motion_easing_standard">cubic-bezier(0.2, 0, 0, 1)</string>
    <string name="text_continue">continue</string>
    <string name="text_init_step_create_a_passcode">"create a
passcode"</string>
    <string name="text_init_step_you_ll_only_need_to_enter_it_when_you_make_a_purchase">"you‘ll only need to
enter it when you
make a purchase."</string>
    <string name="tips_passcode_click_to_finish">click to finish</string>
    <string name="tips_passcode_passcode_has_been_set_successfully">passcode has been set successfully</string>
    <string name="tips_passcode_set_passcode_please_try_again">please try again</string>
</resources>