<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <tech.rabbit.r1launcher.initstep.widget.NumberPickerView android:id="@id/npv_picker" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <TextView android:textSize="30.0sp" android:textColor="@color/white" android:layout_gravity="top" android:id="@id/tv_to_finish" android:layout_width="142.0dip" android:layout_height="wrap_content" android:layout_marginTop="72.0dip" android:text="@string/tips_passcode_click_to_finish" android:includeFontPadding="false" android:lineSpacingMultiplier="1.16" android:alpha="0.0" android:fontFamily="@font/power_grotesk_regular" android:layout_marginStart="3.0dip" android:textFontWeight="400" />
    <LinearLayout android:layout_gravity="bottom" android:orientation="vertical" android:id="@id/ll_tip_container" android:layout_width="198.0dip" android:layout_height="wrap_content" android:layout_marginBottom="83.0dip" android:layout_marginStart="3.0dip">
        <TextView android:textSize="30.0sp" android:textColor="@color/white" android:id="@id/tv_tip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:includeFontPadding="false" android:lineSpacingMultiplier="1.1" android:fontFamily="@font/power_grotesk_regular" android:textFontWeight="400" />
        <TextView android:textSize="20.0sp" android:textColor="@color/AAAAAA" android:id="@id/tv_retry" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="5.0dip" android:text="@string/tips_passcode_set_passcode_please_try_again" android:includeFontPadding="false" android:fontFamily="@font/power_grotesk_regular" android:letterSpacing="0.02" android:textFontWeight="400" />
    </LinearLayout>
    <View android:layout_gravity="bottom" android:background="@drawable/overlay_gradient_000000_00000000_a90" android:layout_width="fill_parent" android:layout_height="60.0dip" />
    <FrameLayout android:id="@id/fl_continue_container" android:background="@color/black" android:layout_width="fill_parent" android:layout_height="fill_parent" android:alpha="0.0">
        <TextView android:textSize="44.0sp" android:textColor="@color/AAAAAA" android:gravity="center" android:layout_gravity="center" android:id="@id/tv_confirm_passcode" android:layout_width="fill_parent" android:layout_height="wrap_content" android:includeFontPadding="false" android:fontFamily="@font/power_grotesk_regular" android:letterSpacing="0.3" android:textFontWeight="400" />
        <TextView android:textSize="30.0sp" android:textColor="@color/selector_000000_ffffff" android:gravity="center" android:layout_gravity="bottom" android:id="@id/tv_continue" android:background="@drawable/selector_ff4d00_00000000_r10" android:layout_width="fill_parent" android:layout_height="36.0dip" android:minWidth="0.0dip" android:minHeight="0.0dip" android:text="@string/text_continue" android:includeFontPadding="false" android:fontFamily="@font/power_grotesk_regular" android:layout_marginStart="3.0dip" android:layout_marginEnd="3.0dip" android:textFontWeight="400" />
    </FrameLayout>
    <TextView android:textSize="30.0sp" android:textColor="@color/white" android:id="@id/tv_success_or_waiting" android:background="@color/black" android:paddingTop="80.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/tips_passcode_passcode_has_been_set_successfully" android:includeFontPadding="false" android:lineSpacingMultiplier="1.2" android:alpha="0.0" android:fontFamily="@font/power_grotesk_regular" android:paddingStart="4.0dip" android:textFontWeight="400" />
</FrameLayout>